--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<p>Witaj, Mam na imię</p>
-		<h1>Michał</h1>
+		<h1>Michaił</h1>
 	</header>
 	<main class="container">
 		<section class="about">
@@ -16,7 +16,7 @@
 			<p>Mam 28 lat i jestem obecnie na kursie front-end developer.</p>
 		</section>
 		<section class="interests">
-			<h2>Mam różne zainteresowania</h2>
+			<h2>Jakieś tam zainteresowania mam</h2>
 			<ul>
 				<li>Gry video</li>
 				<li>Filmy</li>
