--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<header>
 		<p>Witaj, Mam na imię</p>
-		<h1>Michaił</h1>
+		<h1>Michał</h1>
 	</header>
 	<main class="container">
 		<section class="about">
