Change header content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<p>Witaj, Mam na imię</p>
+		<p>Witaj, Nazywam się:</p>
 		<h1>Michał</h1>
 	</header>
 	<main class="container">
