Change footer content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</section>
 	</main>
 	<footer>
-		<p>Znajdziesz mnie na: <a href="#">Facebook</a> | <a href="#">Twitter</a></p>
+		<p>Szukaj mnie na: <a href="#">Facebook</a> | <a href="#">Twitter</a></p>
 	</footer>
 </body>
 </html>
